--- a/src/App.css
+++ b/src/App.css
@@ -15,13 +15,36 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.error-message {
+  font-size: 12px;
+}
+
+.App-body {
+  margin: 0 auto;
+  width: 800px;
+  text-align: center;
+}
+
+.App-body .body-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  text-align: left;
+}
+
+.App-body .body-list li {
+  list-style: none;
+  padding: 5px;
+  text-align: left;
 }
 
 .App-link {
